--- a/templates/listar.html
+++ b/templates/listar.html
@@ -13,7 +13,7 @@
             <table class="table table-striped table-responsive table-bordered">
                 <thead class="thead-default">
                     <tr>
-                        <th>Titulo de la cancion</th>
+                        <th>{{ titulo }}</th>
                     </tr>
                 </thead>
                 <tbody>
