--- a/templates/listar.html
+++ b/templates/listar.html
@@ -19,7 +19,7 @@
                 <tbody>
                     {% for musica in musicas %}
                     <tr>
-                        <td>{{ musica }}</td>
+                        <td>{{ musica.titulo }}</td>
                     </tr>
                     {% endfor %}
                 </tbody>
