--- a/templates/listar.html
+++ b/templates/listar.html
@@ -1,29 +1,34 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf_8">
-        <meta name="viewport" content="width=device_width, initial-scale=1">
-        <title>Discoteca</title>
-    </head>
-    <body>
-        <div class="container">
-            <div class="page-header">
-                <h1>Discoteca</h1>
-            </div>
-            <table class="table table-striped table-responsive table-bordered">
-                <thead class="thead-default">
-                    <tr>
-                        <th>{{ titulo }}</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for musica in musicas %}
-                    <tr>
-                        <td>{{ musica.titulo }}</td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="../static/bootstrap.css">
+    <title>Discoteca</title>
+  </head>
+  <body>
+    <div class="container">
+        <div class="page-header">
+            <h1>{{ titulo }}</h1>
         </div>
-    </body>
+        <table class="table table-striped table-responsive table-bordered">
+            <thead class="thead-default">
+                <tr>
+                    <th>Título</th>
+                    <th>Categoría</th>
+                    <th>Idioma</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for musica in musicas %}
+                <tr>
+                    <td>{{ musica.titulo }}</td>
+                    <td>{{ musica.categoria }}</td>
+                    <td>{{ musica.idioma }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+  </body>
 </html>
