--- a/templates/nuevoRegistro.html
+++ b/templates/nuevoRegistro.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"> <title>Discoteca</title>
+    <link rel="stylesheet" href="../static/bootstrap.css">
 </head>
 <body>
     <div class="container">
         <div class="page-header"> 
             <h1>{{ titulo }}</h1>
         </div>
-        <form>
+        <form action="/crear"method="post">
             <fieldset>
                 <div class="form-group">
                     <label for="titulo">Titulo</label>
